Footer stays at bottom of the window + solved form issue that let some inputs being displayed on top of the footer even though the form is closed (z-index issue)

--- a/assets/components/App/app.scss
+++ b/assets/components/App/app.scss
@@ -1,7 +1,11 @@
 .app {
-  height: 100%;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 1rem;
+  overflow: hidden;
+  box-sizing: border-box;
   main {
-      margin: 0rem 0.5rem 0.5rem 0.5rem;
+    margin: 0rem 0.5rem 0.5rem 0.5rem;
   }
   .filter{
       background-color: rgba(black, 0.5);
