--- a/assets/components/Footer/footer.scss
+++ b/assets/components/Footer/footer.scss
@@ -1,3 +1,28 @@
+@import '../../styles/vars';
+
 .footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  .footerImg {
+    height: auto;
+    width: 90%;
+    position: relative;
+    z-index: -1;
+    opacity: 0.5;
+  }
+  p {
+    padding: 1rem;
+    background-color: $mainColor;
+    color: $secondaryColor;
     text-align: center;
+    margin-top: -5px;
+  }
+  a {
+    color: $secondaryColor;
+    &:hover, &:active {
+      color: $mainOnHoverColor;
+    }
+  }
 }
