--- a/assets/components/Quotes/Form/form.scss
+++ b/assets/components/Quotes/Form/form.scss
@@ -14,7 +14,7 @@
   overflow: hidden;
   position: absolute;
   bottom: 0;
-  z-index: 2;
+  // z-index: 2;
   left: 0;
   right: 0;
   h2 {
