--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,12 +3,15 @@
 
 html {
     font-size: 16px;
+    height: 100%;
 }
 
 body {
     font-family: $mainFamilyFont;
     background-color: $secondaryColor;
     margin: 0;
+    height: 100%;
+    position: relative;
 }
 
 h1 {
